--- a/src/blocks/block-grid-container/styles/style.scss
+++ b/src/blocks/block-grid-container/styles/style.scss
@@ -435,7 +435,8 @@
 @media only screen and (min-width: 992px) {
 
 	.page-template-default .entry-content>.c9-grid,
-	.page-template-default .entry-content>.c9-grid:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide) {
+	.page-template-default .entry-content>.c9-grid:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide),
+	.single .entry-content>.c9-grid {
 		width: 100vw;
 		max-width: 100vw;
 	}
@@ -460,6 +461,11 @@
 }
 
 @media only screen and (min-width: 1200px) {
+	.single .entry-content>.c9-grid {
+		margin-left: calc((-100vw + 100%)/2);
+		margin-right: calc((-100vw + 100%)/2);
+	}
+
 	.container-narrow {
 		width: 960px;
 		margin: 0 auto;
